css resets to fix margin issues on mobile

--- a/themes/recover/static/css/main.css
+++ b/themes/recover/static/css/main.css
@@ -1,5 +1,24 @@
 /* #fad4d4 pale pink option*/
 /* C4DDEA light blue option*/
+
+/* Box sizing rules */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+/* Remove default margin */
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+}
+
 body{
     color: #555;
 }
